# tdd_cpp

./: CMakeLists.txt  Dockerfile  README.md  build.sh  docker_up.sh
.devcontainer/: devcontainer.json
src/: dummy_test.cpp
test/: string_calculator_test.cpp
